# documentation

./: 404.html  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: main.yml
accessing/: index.html
docs/: accessing.md  checklist.md  generation-jeanzay.md  index.md  oscar-tools.md  quickstart.md
docs/schema/: schema-v2.md
docs/tools/: generation-jeanzay.md  oscar-tools.md
docs/versions/: mOSCAR.md  oscar-2019.md  oscar-2109.md  oscar-2201.md  oscar-2301.md
quickstart/: index.html
schema/schema-v2/: index.html
search/: search_index.json
tools/generation-jeanzay/: index.html
tools/oscar-tools/: index.html
versions/mOSCAR/: index.html
versions/oscar-2019/: index.html
versions/oscar-2109/: index.html
versions/oscar-2201/: index.html
versions/oscar-2301/: index.html
