[tool.poetry]
name = "documentation"
version = "0.1.0"
description = ""
authors = ["jabadji <julien.abadji@inria.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^8.2.14"
mkdocs-plotly-plugin = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
